// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> help renders 1`] = `
<div>
  <input
    aria-labelledby="form-0_mock_5--label"
    id="form-0_mock_5"
    type="radio"
    value="100"
  />
  <label
    for="form-0_mock_5"
    id="form-0_mock_5--label"
  >
    Example
    <span>
      Help
    </span>
  </label>
</div>
`;

exports[`<Radio /> label renders 1`] = `
<div>
  <input
    aria-labelledby="form-0_mock_2--label"
    id="form-0_mock_2"
    type="radio"
    value="100"
  />
  <label
    for="form-0_mock_2"
    id="form-0_mock_2--label"
  >
    Label
  </label>
</div>
`;

exports[`<Radio /> renders 1`] = `
<div>
  <input
    aria-labelledby="form-0_mock_0--label"
    id="form-0_mock_0"
    type="radio"
    value="100"
  />
  <label
    for="form-0_mock_0"
    id="form-0_mock_0--label"
  >
    Example
  </label>
</div>
`;
